--- a/программа/WindowsFormsApplication1/Form1.resx
+++ b/программа/WindowsFormsApplication1/Form1.resx
@@ -123,4 +123,81 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAEZcAABGXAAAAAAAAAAA
+        AAAAAAASAAAAoAAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        APUAAABwAAAAAgAAAKcAAAD7AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAO8AAAB3AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPkAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAA//AAAf/wAAH/8AAA//AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAABv8AAEH/AACV/wAAyv8AAOD/AADg/wAAyv8AAJP/AABH/wAA
+        Cv8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AACL/AACe/wAA9f8AAP//AAD//wAA//8AAP//AAD//wAA
+        //8AAPb/AACt/wAANv8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAx/wAAzf8AAPL/AADI/wAAuv8AAN3/AAD//wAA
+        //8AAP//AAD//wAA//8AAP//AADk/wAAX/8AAAH/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAD/8AALz/AADf/wAAnf8AAML/AADS/wAA
+        3/8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AADx/wAAZv8AAAH/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAP/wAAP/8AADT/AAAE/wAAAP8AAAD/AABT/wAA5f8AAJz/AADq/wAA
+        //8AAP//AAD//wAA/v8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AADx/wAAX/8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAGv8AAHP/AABC/wAAT/8AAFj/AAAC/wAABf8AAK7/AAC4/wAA
+        zv8AAP//AADu/wAA+v8AAOn/AADF/wAA3f8AAK//AACn/wAAz/8AAP3/AAD//wAA//8AAP//AADk/wAA
+        QP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AACv/AACL/wAAe/8AAFf/AABY/wAAm/8AABr/AAAP/wAA
+        zP8AAKX/AADv/wAA//8AAN7/AAC3/wAAtv8AAJb/AABy/wAAqP8AAEr/AABJ/wAAeP8AAMj/AAC+/wAA
+        j/8AAG//AACl/wAAHv8AAAD/AAAA/wAAAP8AAAD/AAAA/wAASf8AAG7/AAAz/wAAJ/8AAJf/AABL/wAA
+        Bf8AAA7/AADE/wAApP8AAPT/AAD//wAA/f8AAMz/AACa/wAA3v8AAKb/AACI/wAAh/8AANj/AAC2/wAA
+        n/8AAHz/AACV/wAAif8AANv/AACT/wAAAv8AAAD/AAAA/wAAAP8AAAD/AAAd/wAAcf8AAGf/AAAp/wAA
+        cv8AAB//AAAA/wAABf8AAK//AACp/wAA6v8AAP//AAD//wAA//8AAL7/AABx/wAAx/8AAMv/AACl/wAA
+        9f8AAMv/AACn/wAA4P8AAP//AADK/wAAuv8AAO//AABE/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAA8/wAA
+        eP8AAFz/AAAP/wAAAP8AAAD/AAAA/wAAf/8AAMH/AADG/wAA//8AAP//AAD//wAAx/8AAIb/AACr/wAA
+        uP8AAJv/AAC3/wAAov8AAOX/AADt/wAA7v8AAOv/AACm/wAAp/8AAHr/AAAC/wAAAP8AAAD/AAAA/wAA
+        AP8AAAL/AABb/wAAaP8AAG7/AAAL/wAAAP8AAAD/AAA2/wAA3f8AAKD/AAD1/wAA//8AAP//AADZ/wAA
+        M/8AAHf/AACp/wAAdP8AAF3/AACK/wAAr/8AAKz/AACI/wAAe/8AAKf/AACO/wAAgf8AABP/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AADX/AADE/wAAqf8AAKT/AABf/wAAT/8AAFn/AACj/wAAsv8AANb/AAD//wAA
+        //8AAPP/AAA6/wAAAP8AADX/AACX/wAAtv8AALH/AADX/wAArf8AAJj/AACI/wAA+v8AAOv/AACh/wAA
+        HP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAMv8AAMz/AACv/wAA+/8AAP3/AAD7/wAA+/8AANH/AACb/wAA
+        5P8AAP//AAD//wAA//8AAGv/AAAA/wAAAP8AAA3/AAA//wAAQ/8AAH3/AAC9/wAA5f8AAJT/AAD2/wAA
+        2/8AAH7/AAAT/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAO/wAArP8AAP//AAD//wAA//8AAP//AAD//wAA
+        //8AANr/AACj/wAA+v8AAP//AAD//wAAm/8AAAD/AAAA/wAAAP8AAAD/AAAB/wAADP8AABr/AAA1/wAA
+        Xf8AAPD/AACr/wAAW/8AAAL/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAb/wAAvf8AAMT/AACN/wAA
+        7P8AAP//AAD//wAA//8AANL/AADz/wAA//8AAP//AACl/wAAAf8AAAD/AAAC/wAABv8AAAD/AAAA/wAA
+        AP8AAAD/AABk/wAArv8AAHL/AAAX/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAq/wAA
+        tP8AAJn/AADJ/wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAIH/AAAA/wAAFf8AAJP/AACC/wAA
+        ff8AAF3/AABV/wAAif8AAIj/AABm/wAAHf8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAx/wAAnv8AAOL/AAD//wAA8/8AAPD/AADy/wAA//8AAP//AADb/wAAMP8AACb/AAB//wAA
+        8v8AANP/AACm/wAAxf8AAL//AAB2/wAALP8AAAX/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AADH/AAC1/wAAmP8AAL//AADN/wAAj/8AAF//AACu/wAAzP8AADb/AAAq/wAA
+        v/8AALj/AAC5/wAAz/8AAO//AACX/wAAZv8AAAL/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAMP8AAMT/AACL/wAAn/8AAMz/AADp/wAAvP8AAI7/AACG/wAA
+        Of8AADb/AACh/wAAm/8AAIv/AADZ/wAAy/8AAHX/AAAX/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAB/wAAU/8AALr/AADN/wAAof8AALD/AAD9/wAA
+        tP8AAJX/AABQ/wAAoP8AAJf/AADQ/wAAmv8AAJv/AACx/wAAIf8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAfP8AAN//AACo/wAA
+        pv8AANz/AADj/wAAOf8AACj/AAAr/wAAEP8AAHj/AABT/wAAJP8AADf/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAj/wAA
+        1/8AAKD/AAC9/wAA7v8AAO7/AABZ/wAABv8AAAD/AAAA/wAACf8AAAL/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAH/AAAG/wAA
+        AP8AAB7/AAC1/wAAsv8AAP//AADx/wAA+P8AAPn/AACc/wAAEf8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AADn/AABO/wAAl/8AAOb/AACg/wAA+P8AAHz/AABF/wAAn/8AAOj/AAA4/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAEv8AAHb/AACy/wAAw/8AAMb/AACp/wAAqv8AAB7/AAAW/wAAif8AABr/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD+AAAAwwAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAT/AAAb/wAAnP8AAMP/AADC/wAA1v8AAGb/AAAV/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA+QAA
+        AJMAAAAeAAAApwAAAP0AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAG/wAAPP8AAHT/AACI/wAA
+        X/8AAAr/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        APQAAAB+AAAACQAAAAAAAAATAAAAnwAAAP0AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAADyAAAAcQAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAE=
+</value>
+  </data>
 </root>
